<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/first_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextNum1"
        android:layout_marginStart="50dp"
        android:text="@string/first_number" />

    <EditText
        android:id="@+id/editTextNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@+id/second_number"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/second_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextNum2"
        android:layout_marginStart="50dp"
        android:text="@string/second_number" />

    <EditText
        android:id="@+id/editTextNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNum1"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/second_number"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextNumAns"
        android:layout_marginStart="50dp"
        android:text="@string/answer" />

    <EditText
        android:id="@+id/editTextNumAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNum2"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/second_number"
        android:ems="10"
        android:enabled="false"
        android:inputType="none" />

    <Button
        android:id="@+id/b_Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/b_Subtract"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/b_Subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/b_Multiply"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/subtract" />

    <Button
        android:id="@+id/b_Multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/b_Divide"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/multiply" />

    <Button
        android:id="@+id/b_Divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/divide" />

</RelativeLayout>
